LJ 2.0 - v1.1 minor adjust

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://base44.com/logo_v2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>Life Journey</title>
+    <link rel="manifest" href="/life-journey-2.0/manifest.json" />
+    <title>Life Journey 2.0</title>
   </head>
   <body>
     <div id="root"></div>
