--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="https://base44.com/logo_v2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/life-journey-2.0/manifest.json" />
-    <title>Life Journey 2.0</title>
+    <title>Life Journey 2.0 mobile </title>
   </head>
   <body>
     <div id="root"></div>
